# hlybokyi-potik

./: ._path_prefix.py  .env  .gitignore  airlines_cleaned.csv  data_preambles.py  flows.txt  path_prefix.py  pyproject.toml  requirements.txt  trajoscope.py  wx_inspect.ipynb
airspace_features/: inspect_airspace_features.ipynb
cleaning_script/: clean_by_speed.py
data/: ._airports.csv  airports.csv
flight_schedules/: 1_schedule_downloader.py  2_json_to_csv.py  3_combine_to_schedule.py  4_compute_metadata.py  5_download_routes.py  6_create_route_db.py  7_long_haul_assignment.py  8_0_compute_score.py  8_1_match_connection.py  8_2_derive_conn_time.py  8__collapse_codeshare.py  8_linkage_infer.ipynb  config.yml  match_tail.py
flow_detection/: flow_detect.py  get_hourly_segments.py  get_hourly_segments_mp.py
gpv/: create_training_set.ipynb
guides/: building_dataset.md
hlybokyi_potik.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pre_scripts/: 1_1delete_empty_csv.sh  1_1download_ostrino.py  1download_osstate.py  2fix_csv_and_create_dangling_catalog.py  3_1create_working_dset_without_sampling.py  3sample_working_dset.py  opensky.conf
pre_scripts2/: 1_1download_ostrino.py  build_count_for_blocks.ipynb  compute_routes.py  count_blocks.ipynb  create_merge_instrs.ipynb  create_merge_instrs_server.ipynb  download_grib.ipynb  get_route.py  inspect_routes.ipynb  viz_segments.ipynb
pre_scripts_legacy_DO_NOT_RUN/: 1_1download_ostrino.ipynb  1download_osstate.py  2fix_csv_and_create_dangling_catalog.py  3_1create_working_dset_without_sampling.py  3sample_working_dset.py
(+55 files in other folders)
